versions/v2.9/modules/en/pages/security/security-overview.adoc
= {rancher-product-name} Security Guides
:page-languages: [en, zh]
:revdate: 2025-06-20
:page-revdate: {revdate}
:community-path: reference-guides/rancher-security/index.adoc 
:product-path: security/security-overview.adoc
ifeval::["{build-type}" != "community"]
:xref-manage-rbac: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/manage-role-based-access-control-rbac.adoc
:xref-cis-howto: xref:security/cis-scans/how-to.adoc
:xref-selinux-rpm: xref:security/selinux-rpm/selinux-rpm.adoc
:xref-neuvector: xref:integrations/neuvector/neuvector.adoc
:xref-cves: xref:security/cves.adoc
:xref-security-best-practices: xref:security/rancher-security-best-practices.adoc
:xref-k8s-security-best-practices: xref:security/kubernetes-security-best-practices.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-manage-rbac: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/index.adoc
:xref-cis-howto: xref:how-to-guides/advanced-user-guides/cis-scan-guides/index.adoc
:xref-selinux-rpm: xref:reference-guides/rancher-security/selinux-rpm/index.adoc
:xref-neuvector: xref:integrations-in-rancher/neuvector/index.adoc
:xref-cves: xref:reference-guides/rancher-security/security-advisories-and-cves.adoc
:xref-security-best-practices: xref:reference-guides/rancher-security/rancher-security-best-practices.adoc
:xref-k8s-security-best-practices: xref:reference-guides/rancher-security/kubernetes-security-best-practices.adoc
endif::[]

[pass]
<table width="100%">
  <tr style="vertical-align: top;text-align: center;border-bottom-style: none;border-top-style: solid;border-top-width: 2px;border-top-color: #c0c2c4;">
    <td width="30%">
      <h4>Security policy</h4><br/>
      <p style={{padding: '8px'}}>Rancher Labs supports responsible disclosure, and endeavours to resolve all issues in a reasonable time frame. </p>
    </td>
    <td width="30%">
      <h4>Reporting process</h4><br/>
      <p style={{padding: '8px'}}>Please submit possible security issues by emailing <a href="mailto:security-rancher@suse.com">security-rancher@suse.com</a> .</p>
    </td>
    <td width="30%">
      <h4>Announcements</h4><br/>
      <p style={{padding:'8px'}}>Subscribe to the <a href="https://forums.rancher.com/c/announcements">Rancher announcements forum</a> for release updates.</p>
    </td>
  </tr>
</table>

Security is at the heart of all Rancher features. From integrating with all the popular authentication tools and services, to an enterprise grade {xref-manage-rbac}[RBAC capability], Rancher makes your Kubernetes clusters even more secure.

On this page, we provide security related documentation along with resources to help you secure your Rancher installation and your downstream Kubernetes clusters.

== {neuvector-product-name} Integration with Rancher

NeuVector is an open-source, container-focused security application that is now integrated into Rancher. NeuVector provides production security, DevOps vulnerability protection, and a container firewall, et al. Please see the {xref-neuvector}[Rancher docs] and the {url-security-overview}[{neuvector-product-name} docs] for more information.

== Running a CIS Security Scan on a Kubernetes Cluster

Rancher leverages https://github.com/aquasecurity/kube-bench[kube-bench] to run a security scan to check whether Kubernetes is deployed according to security best practices as defined in the https://www.cisecurity.org/cis-benchmarks/[CIS] (Center for Internet Security) Kubernetes Benchmark.

The CIS Kubernetes Benchmark is a reference document that can be used to establish a secure configuration baseline for Kubernetes.

The Center for Internet Security (CIS) is a 501(c)(3) non-profit organization, formed in October 2000, with a mission to "identify, develop, validate, promote, and sustain best practice solutions for cyber defense and build and lead communities to enable an environment of trust in cyberspace".

CIS Benchmarks are best practices for the secure configuration of a target system. CIS Benchmarks are developed through the generous volunteer efforts of subject matter experts, technology vendors, public and private community members, and the CIS Benchmark Development team.

The Benchmark provides recommendations of two types: Automated and Manual. We run tests related to only Automated recommendations.

When Rancher runs a CIS security scan on a cluster, it generates a report showing the results of each test, including a summary with the number of passed, skipped and failed tests. The report also includes remediation steps for any failed tests.

For details, refer to the section on {xref-cis-howto}[security scans].

== SELinux RPM

https://en.wikipedia.org/wiki/Security-Enhanced_Linux[Security-Enhanced Linux (SELinux)] is a security enhancement to Linux. After being historically used by government agencies, SELinux is now industry standard and is enabled by default on CentOS 7 and 8.

We provide two RPMs (Red Hat packages) that enable Rancher products to function properly on SELinux-enforcing hosts: `rancher-selinux` and `rke2-selinux`. For details, see {xref-selinux-rpm}[this page].

== Rancher Hardening Guide

The Rancher Hardening Guide is based on controls and best practices found in the https://www.cisecurity.org/benchmark/kubernetes/[CIS Kubernetes Benchmark] from the Center for Internet Security.

The hardening guides provide prescriptive guidance for hardening a production installation of Rancher. See Rancher's guides for <<_the_cis_benchmark_and_self_assessment,Self Assessment of the CIS Kubernetes Benchmark>> for the full list of security controls.

____
The hardening guides describe how to secure the nodes in your cluster, and it is recommended to follow a hardening guide before installing Kubernetes.
____

Each version of the hardening guide is intended to be used with specific versions of the CIS Kubernetes Benchmark, Kubernetes, and Rancher.

== The CIS Benchmark and Self-Assessment

The benchmark self-assessment is a companion to the Rancher security hardening guide. While the hardening guide shows you how to harden the cluster, the benchmark guide is meant to help you evaluate the level of security of the hardened cluster.

Because Rancher and RKE install Kubernetes services as Docker containers, many of the control verification checks in the CIS Kubernetes Benchmark don't apply. This guide will walk through the various controls and provide updated example commands to audit compliance in Rancher created clusters. The original benchmark documents can be downloaded from the https://www.cisecurity.org/benchmark/kubernetes/[CIS website].

Each version of Rancher's self-assessment guide corresponds to specific versions of the hardening guide, Rancher, Kubernetes, and the CIS Benchmark.

== Third-party Penetration Test Reports

Rancher periodically hires third parties to perform security audits and penetration tests of the Rancher software stack. The environments under test follow the Rancher provided hardening guides at the time of the testing. Previous penetration test reports are available below.

Results:

* https://releases.rancher.com/documents/security/pen-tests/2019/RAN-01-cure53-report.final.pdf[Cure53 Pen Test - July 2019]
* https://releases.rancher.com/documents/security/pen-tests/2019/UntamedTheory-Rancher_SecurityAssessment-20190712_v5.pdf[Untamed Theory Pen Test - March 2019]

Please note that new reports are no longer shared or made publicly available.

== Rancher Security Advisories and CVEs

Rancher is committed to informing the community of security issues in our products. For the list of CVEs (Common Vulnerabilities and Exposures) for issues we have resolved, refer to {xref-cves}[this page.]

== Kubernetes Security Best Practices

For recommendations on securing your Kubernetes cluster, refer to the {xref-k8s-security-best-practices}[Kubernetes Security Best Practices] guide.

== Rancher Security Best Practices

For recommendations on securing your Rancher Manager deployments, refer to the {xref-security-best-practices}[Rancher Security Best Practices] guide.
